tests/baselines/reference/ClassDeclaration21.errors.txt
==== tests/cases/compiler/ClassDeclaration21.ts (1 errors) ====
    class C {
        0();
        1() { }
        ~
!!! ClassDeclaration21.ts(3,5): error TS2239: Function overload name must be '0'.
    }